--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 :root {
-	--input-height: 30px;
-	--input-width: 250px;
+	--input-height: 50px;
+	--input-width: 240px;
+
+	--white: #F9F9F9;
+	--gray: #F5F7F8;
+	--purple: #313866;
+	--bright-orange: #FF6C22;
+	--med-orange: #FF9209;
+	--pale-orange: #FFD099;
+	--blue: #2B3499;
 }
 * {
 	margin: 0;
@@ -16,10 +24,11 @@ body {
 	font-family: 'Quicksand', sans-serif;
 }
 .banner {
-	grid-area: "banner";
+	min-width: 300px;
+	grid-area: banner;
 	background-image: url(./assets/bird-background.jpg);
 	filter: brightness(.8);
- 	background-size: 1000px auto;
+ 	background-size: cover;
  	background-position-x: 45%;
 	background-repeat: no-repeat;
  	position: relative;
@@ -32,7 +41,7 @@ body {
 	gap: 1rem;
 	position: absolute;
 	top: 60%;
-	color: white;
+	color: var(--pale-orange);
 	z-index: 2;
 	padding-block: 4rem;
 	font-family: 'Lato', sans-serif;
@@ -50,47 +59,46 @@ body {
 	filter: opacity(50%);
 }
 main.content {
-	grid-area: "content";
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	gap: 2rem;
-	padding: 2rem;
+	grid-area: content;
+	padding: 5rem 0 2rem;
+	background-color: var(--gray);
 }
+
 .cta {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-}
-.cta p {
+	padding-inline: 2rem;
 	font-size: 18px;
 	font-weight: 600;
 }
-.cta h3 {
-	font-size: 22px;
-	font-weight: 700;
-}
-.cta em {
-	text-decoration: underline;
-	text-decoration-style: double;
+.cta p {
+	margin-bottom: 1rem;
 }
 
-form {
-	width: 100%;
-}
 fieldset {
 	border: none;
+	padding: 4rem 2rem;
+	margin-block: 3rem;
+	background-color: var(--white);
+	box-shadow: 0 3px 8px 1px;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
 	gap: 1.5rem;
-	padding: 2rem 0;
+}
+form legend {
+	font-size: 22px;
+	font-weight: 700;
+	position: relative;
+	top: 35px;
+}
+form em {
+	text-decoration: underline;
+	text-decoration-style: double;
+	color: var(--purple);
 }
 form .row {
 	display: flex;
-	gap: 1rem;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 1.5rem;
 }
 form .row>* {
 	display: flex;
@@ -100,6 +108,14 @@ form .row input {
 	padding-left: 5px;
 	height: var(--input-height);
 	width: var(--input-width);
+	border-radius: 10px;
+	border: 2px solid black;
+	outline: none;
+	background-color: var(--gray);
+}
+form .row input:focus, 
+form .row input:focus-visible {
+	border-color: var(--blue);
 }
 form .row input::placeholder {
 	opacity: 0;
@@ -109,14 +125,47 @@ form .row>* label {
 	padding-left: 5px;
 	top: -5px;
 	opacity: .8;
-	transition: all 250ms ease-out;
+	transition: all 250ms ease-in;
 	user-select: none;
+	color: var(--blue);
 }
 form .row>*:has(input:placeholder-shown) label {
 	top: calc(calc(var(--input-height) * .5) + 10px);
 	cursor: text;
+	color: black;
 }
 form .row>*:has(input:focus) label {
 	cursor: default;
 	top: -5px;
+	color: var(--blue);
+}
+button {
+	display: block;
+	margin: 1rem auto;
+	padding: 1rem 2rem;
+	font-size: 24px;
+	cursor: pointer;
+	background-color: var(--purple);
+	color: var(--gray);
+	border: 1px solid black;
+	border-radius: 10px;
+	transition: all 250ms ease-in-out;
+}
+button:hover {
+	filter: brightness(1.1);
+}
+button:active {
+	filter: brightness(.7);
+}
+button:focus-visible {
+	border: 1px solid var(--white);
+	outline: 1px solid black;
+}
+p.log-in {
+	text-align: center;
+	margin-block: 1rem;
+}
+.log-in a {
+	color: var(--purple);
+	font-weight: 600;
 }
